--- a/config/routing.yml
+++ b/config/routing.yml
@@ -784,6 +784,13 @@ detalleEntrada_insert:
   load:
     - model/base/detalleEntradaBaseTableClass.php
     - model/detalleEntradaTableClass.php
+    - model/base/tipoDocBaseTableClass.php
+    - model/tipoDocTableClass.php
+    - model/base/entradaBodegaBaseTableClass.php
+    - model/entradaBodegaTableClass.php
+    - model/base/insumoBaseTableClass.php
+    - model/insumoTableClass.php
+ 
     
 detalleEntrada_view:
   url:    /detalleEntrada/ver
