Implementacion de Control Calidad. Adicion de palabras de Control Calidad al diccionario.

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1093,3 +1093,78 @@ detalleEmpaque_deleteSelect:
     - model/detalleEmpaqueTableClass.php
 
 ##--------------------------DETALLE EMPAQUE----------------------------##
+##--------------------------CONTROL CALIDAD------------------------##
+
+controlCalidad_index:
+  url:    /controlCalidad/index
+  param:  { module: controlCalidad, action: index, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+ 
+controlCalidad_view:
+  url:    /controlCalidad/ver
+  param:  { module: controlCalidad, action: view, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+
+controlCalidad_insert:
+  url:    /controlCalidad/insertar
+  param:  { module: controlCalidad, action: insert, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+ 
+controlCalidad_create:
+  url:    /controlCalidad/crear
+  param:  { module: controlCalidad, action: create, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+    
+controlCalidad_edit:
+  url:    /controlCalidad/editar
+  param:  { module: controlCalidad, action: edit, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+    
+controlCalidad_update:
+  url:    /controlCalidad/actualizar
+  param:  { module: controlCalidad, action: update, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+ 
+controlCalidad_delete:
+  url:    /controlCalidad/eliminar
+  param:  { module: controlCalidad, action: delete, format: json }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+
+controlCalidad_deleteSelect:
+  url:    /controlCalidad/eliminarSeleccion
+  param:  { module: controlCalidad, action: deleteSelect, format: html }
+  load:
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+    
+##-------------------------------------------------------------------------##
