IMPLEMENTACION DE BARRA DE MENU EN EMPLEADO Y CONTROL CALIDAD

--- a/config/security.yml
+++ b/config/security.yml
@@ -14,14 +14,16 @@ default:
   index:
     security: true
     credentials:
-      - [admin, Carlos]
+      - [admin]
   insert:
     security: true
-  
-control_calidad:
+    
+controlCalidad:
   index:
     security: true
     credentials:
-      - [admin, Carlos]
+      - [admin]
   insert:
+    security: true
+  create:
     security: true
