implementacion de segurida en las tablas insumo y tipo insumo

--- a/config/security.yml
+++ b/config/security.yml
@@ -50,4 +50,24 @@ detalleEntrada:
     security: true
   create:
     security: true
+    
+insumo:
+  index:
+    security: true
+    credentials:
+      - [admin]
+  insert:
+    security: true
+  create:
+    security: true
+    
+tipoInsumo:
+  index:
+    security: true
+    credentials:
+      - [admin]
+  insert:
+    security: true
+  create:
+    security: true
      
