--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1099,7 +1099,7 @@ insumo_deleteFilters:
   load:
 
 insumo_reporte:
-  url:    /controlCalidad/insumo
+  url:    /insumo/report
   param:  { module: insumo, action: report, format: pdf }
   load:
     - libs/fpdf/fpdf.php
