Modificacion de Iconos en Tabla Empleado

--- a/config/view.yml
+++ b/config/view.yml
@@ -10,7 +10,7 @@ all:
   stylesheet:
     - bootstrap.css
     - main.css
-
+    - font-awesome.min.css
 shfSecurity:
   index:
     title: Identificaci—n de usuario
