--- a/config/security.yml
+++ b/config/security.yml
@@ -22,7 +22,7 @@ controlCalidad:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -33,7 +33,7 @@ entradaBodega:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -44,7 +44,7 @@ detalleEntrada:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -54,7 +54,7 @@ insumo:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -64,7 +64,7 @@ tipoInsumo:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -74,7 +74,7 @@ empleado:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -86,7 +86,7 @@ credencial:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
@@ -98,7 +98,7 @@ tipoId:
   index:
     security: true
     credentials:
-      - [admin]
+      - [admin, Carlos]
   insert:
     security: true
   create:
