Cambio de Color visual, seguridad

--- a/config/security.yml
+++ b/config/security.yml
@@ -74,13 +74,19 @@ empleado:
   index:
     security: true
     credentials:
-      - [admin, Carlos]
+        - [admin, Carlos]
   insert:
     security: true
+    credentials:
+      - [admin]
   create:
     security: true
+    credentials:
+      - [admin]
   delete:
     security: true
+    credentials:
+      - [admin]
     
 credencial:
   index:
