--- a/config/security.yml
+++ b/config/security.yml
@@ -111,3 +111,15 @@ tipoId:
     security: true
   delete:
     security: true
+    
+empaque:
+  index:
+    security: true
+    credentials:
+      - [admin, Carlos]
+  insert:
+    security: true
+  create:
+    security: true
+  delete:
+    security: true
