--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1388,4 +1388,49 @@ ingresoCaña_index:
     - model/proveedorTableClass.php
     - model/base/insumoBaseTableClass.php
     - model/insumoTableClass.php
+ 
+ingresoCaña_insert:
+  url:    /ingresoCaña/insertar
+  param:  { module: ingresoCaña, action: insert, format: html }
+  load:
+    - model/base/ingresoCañaBaseTableClass.php
+    - model/ingresoCañaTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+    - model/base/insumoBaseTableClass.php
+    - model/insumoTableClass.php
     
+ingresoCaña_create:
+  url:    /ingresoCaña/crear
+  param:  { module: ingresoCaña, action: create, format: html }
+  load:
+    - model/base/ingresoCañaBaseTableClass.php
+    - model/ingresoCañaTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+    - model/base/insumoBaseTableClass.php
+    - model/insumoTableClass.php
+    
+ingresoCaña_delete:
+  url:    /ingresoCaña/eliminar
+  param:  { module: ingresoCaña, action: delete, format: json }
+  load:
+    - model/base/ingresoCañaBaseTableClass.php
+    - model/ingresoCañaTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
+    - model/base/insumoBaseTableClass.php
+    - model/insumoTableClass.php
+
+ingresoCaña_deleteSelect:
+  url:    /ingresoCaña/eliminarSeleccion
+  param:  { module: ingresoCaña, action: deleteSelect, format: html }
+  load:
+    - model/base/ingresoCañaBaseTableClass.php
+    - model/ingresoCañaTableClass.php
