--- a/config/security.yml
+++ b/config/security.yml
@@ -39,6 +39,15 @@ entradaBodega:
   create:
     security: true
     
+salidaBodega:
+  index:
+    security: true
+    credentials:
+      - [admin, Carlos]
+  insert:
+    security: true
+  create:
+    security: true        
         
 detalleEntrada:
   index:
